--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,14 @@ requests>=2.31.0,<3.0.0
 typing-extensions>=4.12.2,<5.0.0 
 
 yt-dlp>=2023.12.30
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 Pillow>=10.0.0
-numpy>=1.24.0 
+numpy>=1.24.0
+
+# SSL and certificate handling
+certifi>=2023.0.0
+urllib3>=2.0.0
+cryptography>=41.0.0
+
+# HTTP client with better SSL support  
+httpx>=0.25.0 
